Rename endpoint /json to /getWorkers. Modify response JSON schema.
