# test_App.py
@@ -34,27 +34,43 @@ class TestWebApp(unittest.TestCase):
         message = response.get_data(as_text=True)
         assert message == f"Hello, {name}!"
 
-    ## Tests endpoint: /json
-    def test_json(self):
-        response = self.client.get('/json')
+    ## Tests endpoint: /getWorkers
+    def test_get_workers(self):
+        response = self.client.get('/getWorkers')
         assert response.status_code == 200
 
+        expected = {
+            "workers" : [
+                {
+                    "name" : "Chan Tai Man",
+                    "sex" : "M",
+                    "is_reg_member" : True,
+                    "age" : 56,
+                    "work_days" : [ "Monday", "Tuesday", "Wednesday", "Thursday", "Friday" ]
+                },
+                {
+                    "name" : "Ma Siu Ling",
+                    "sex" : "F",
+                    "is_reg_member" : False,
+                    "age" : 22,
+                    "work_days" : [ "Monday", "Wednesday", "Friday" ]
+                }
+            ]
+        }
         data = json.loads(response.get_data())
-        assert data["name"] == "Chan Tai Man"
-        assert data["is_alive"] is True
-        assert data["age"] == 56
-
-        work_days_expected = [ "Monday", "Tuesday", "Wednesday", "Thursday", "Friday"]
-        assert data["work_days"] == work_days_expected
+        self.assertEqual(expected, data)
     
     # Tests endpoint: /timestwo; happy path
     def test_multiply_by_two_normal(self):
         response = self.client.post('/timestwo', data={"num" : 3})
         assert response.status_code == 200
 
+        expected = {
+            "num" : 3,
+            "result" : 6
+        }
         data = json.loads(response.get_data())
-        assert data["num"] == 3
-        assert data["result"] == 6
+        self.assertEqual(expected, data)
 
     # Tests endpoint: /timestwo; request parameter "num" is not an integer
     def test_multiply_by_two_noninteger_param(self):
